<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_library" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnLoginStaff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_staff"
        android:layout_marginBottom="12dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnLoginMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_member"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
