<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvBookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvBookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnRequestBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_book"/>
    </LinearLayout>
</ScrollView>
